--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,17 +2,17 @@
 <html>
 <head>
 	<title>Layout</title>
-	<link rel="stylesheet" type="text/css" href="stylesheets/_bootstrap.css" />
+	<link rel="stylesheet" type="text/css" href="/stylesheets/_bootstrap.css" />
 
-	<link rel="stylesheet" type="text/css" href="stylesheets/menu.css" />
-	<link rel="stylesheet" type="text/css" href="stylesheets/index.css" />
+	<link rel="stylesheet" type="text/css" href="/stylesheets/menu.css" />
+	<link rel="stylesheet" type="text/css" href="/stylesheets/index.css" />
 </head>
 <body>
 	<%= erb :page_menu %>
 
 	<%= yield %>
 
-	<script src="javascripts/jquery-2.1.3.min.js"></script>
-	<script src="javascripts/bootstrap.js"></script>
+	<script src="/javascripts/jquery-2.1.3.min.js"></script>
+	<script src="/javascripts/bootstrap.js"></script>
 </body>
 </html>	
