--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,6 +12,15 @@
 
 	<%= yield %>
 
+	<script type="text/javascript">
+		//Facebook is helpful so we have to unhelp ourselves
+		(function () {
+			if (window.location.hash == '#_=_') {
+				history.replaceState ? history.replaceState(null, null, window.location.href.split("#")[0])
+									 : window.location.hash = '';
+			}
+		})();
+	</script>
 	<script src="/javascripts/jquery-2.1.3.min.js"></script>
 	<script src="/javascripts/bootstrap.js"></script>
 </body>
