Given the level of effort required to get Facebook login working, I feel okay putting Google login on the back burner

--- a/public/stylesheets/sass/menu.scss
+++ b/public/stylesheets/sass/menu.scss
@@ -9,6 +9,9 @@ nav#main-navigation {
 			padding: 15px;
 		}
 
+		img {
+			max-height: 32px;
+		}
 		#button-facebook-signin {
 			display: block;
 			margin-bottom: 15px;
