--- a/views/page_menu.erb
+++ b/views/page_menu.erb
@@ -20,8 +20,8 @@
 		<ul class="nav navbar-nav navbar-right">
 			<li class="dropdown" id="nav-signin-dropdown">
 				<a class="dropdown-toggle" href="#" data-toggle="dropdown">
-					<img class="avatar" src="<%= @session_state[:avatar] %>"></img>
-					<%= @session_state[:user_name] %></a>
+					<img class="avatar" src="<%= @session_state[:user_profile].avatar_url %>"></img>
+					<%= @session_state[:user_profile].full_name %></a>
 				<div class="dropdown-menu">
 					<a id="button-signout" href="#">Sign out</a>
 				</div>
