Add the ability to sign out

--- a/views/page_menu.erb
+++ b/views/page_menu.erb
@@ -23,7 +23,7 @@
 					<img class="avatar" src="<%= @session_state[:user_profile].avatar_url %>"></img>
 					<%= @session_state[:user_profile].full_name %></a>
 				<div class="dropdown-menu">
-					<a id="button-signout" href="#">Sign out</a>
+					<a id="button-signout" href="/signout">Sign out</a>
 				</div>
 			</li>
 		</ul>
