--- a/views/error.erb
+++ b/views/error.erb
@@ -1,20 +1,36 @@
-<h1>Something Went Wrong</h1>
+<style type="text/css">
+	.row-margin {
+		margin-top: 15px;
+	}
+</style>
 
-<% if error_state[:generic_error] %>
-<div>
-	The requested action could not be completed. Please try again or contact an administrator. 
-</div>
-
-<% else %>
-<div>
-	Unable to "<b><%= error_state[:action] %></b>". 
-</div>
-
-<div>
-	<i><%= error_state[:reason] %></i>
-</div>
-<% end %>
-
-<div>
-	Additional information may have been logged. The current time is: <b><%= Time.now.getutc %></b>
+<div class="container">
+	<div class="row row-margin">
+		<div class="col-xs-12">
+			<h1><%= error_state[:title] %></h1>
+		</div>
+	</div>
+	<% if error_state[:generic_error] %>
+	<div class="row row-margin">
+		<div class="col-xs-12">
+			The requested action could not be completed. Please try again or contact an administrator. 
+		</div>
+	</div>
+	<% else %>
+	<div class="row row-margin">
+		<div class="col-xs-12">
+			Unable to <b><%= error_state[:action] %></b>. 
+		</div>
+	</div>
+	<div class="row row-margin">
+		<div class="col-xs-12">
+			<i><%= error_state[:reason] %></i>
+		</div>
+	</div>
+	<% end %>
+	<div class="row row-margin">
+		<div class="col-xs-12">
+			Additional information may have been logged. The current time is: <b><%= Time.now.getutc %></b>
+		</div>
+	</div>
 </div>
