Make the logo in the page menu bar link back to the main page

--- a/views/page_menu.erb
+++ b/views/page_menu.erb
@@ -6,7 +6,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a href="#" class="navbar-brand"><%= $config[:general][:site_name] %></a>
+		<a href="<%= $config[:general][:base_url] %>" class="navbar-brand"><%= $config[:general][:site_name] %></a>
 	</div>
 
 	<div id="navbarCollapse" class="collapse navbar-collapse">
