--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,6 +11,8 @@
 
 	<link rel="stylesheet" type="text/css" href="/stylesheets/menu.css" />
 	<link rel="stylesheet" type="text/css" href="/stylesheets/index.css" />
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
 	<%= erb :page_menu %>
@@ -26,7 +28,6 @@
 			}
 		})();
 	</script>
-	<script src="/javascripts/jquery-2.1.3.min.js"></script>
 	<script src="/javascripts/bootstrap.js"></script>
 </body>
 </html>	
