--- a/views/logged_out.erb
+++ b/views/logged_out.erb
@@ -1,1 +1,16 @@
-<h1>Y U NO LOG IN?</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12">
+			<h1><%= @page_state[:site_title] %></h1>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12">
+			<h2>Unavailable To Guests</h2>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-xs-12">This site is only available to signed-in accounts. Sign in or create a new account for more excitement!</div>
+	</div>
+</div>
