Spruce up the "Unconfirmed User" page

--- a/views/unconfirmed_user.erb
+++ b/views/unconfirmed_user.erb
@@ -1,3 +1,15 @@
-<h1>Unconfirmed</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12">
+			<h1>Unconfirmed User</h1>
+		</div>
+	</div>
 
-Your horses must be held.
+	<div class="row">
+		<div class="col-xs-12">You must be confirmed by an administrator before using this site.</div>
+	</div>
+
+	<div class="row">
+		<div class="col-xs-12">The administrators have been notified of your registration and your confirmation is currently pending.</div>
+	</div>
+</div>
