--- a/views/error.erb
+++ b/views/error.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
-		<div class="col-xs-12">
-			<h1><%= error_state[:title] %></h1>
+		<div class="col-xs-12 page-title">
+			<div><%= error_state[:title] %></div>
 		</div>
 	</div>
 	<% if error_state[:generic_error] %>
