--- a/views/book_add.erb
+++ b/views/book_add.erb
@@ -12,7 +12,7 @@
 	</div>
 	<form class="form-horizontal">
 		<div class="form-group">
-			<label class="col-sm-2 sr-only control-label">Goodreads Search</label>
+			<div class="col-sm-2" style="text-align: right"><label class="sr-only control-label">Goodreads Search</label><img id="goodreads-search-spinner" class="invisible" src="/images/spinner.gif" style="max-height: 32px"/></div>
 			<div class="col-sm-10"><input class="form-control" id="goodreads-search-input" placeholder="Goodreads Search"/></div>
 		</div>
 	</form>
@@ -20,7 +20,23 @@
 	<form class="form-horizontal">
 		<div class="form-group">
 			<label class="col-sm-2 control-label">Title</label>
-			<div class="col-sm-10"><input class="form-control"/></div>
+			<div class="col-sm-10"><input class="form-control" id="add-book-title"/></div>
+		</div>
+		<div class="form-group">
+			<label class="col-sm-2 control-label">Author</label>
+			<div class="col-sm-10"><input class="form-control" id="add-book-author"/></div>
+		</div>
+		<div class="form-group">
+			<label class="col-sm-2 control-label"><img id="summary-spinner" class="invisible" src="/images/spinner.gif" style="max-height: 24px"/>Summary</label>
+			<div class="col-sm-10"><textarea class="form-control" id="add-book-summary" rows="7"></textarea></div>
+		</div>
+		<div class="form-group">
+			<label class="col-sm-2 control-label">Image URL</label>
+			<div class="col-sm-10"><input class="form-control" id="add-book-image-url"/></div>
+		</div>
+		<div class="form-group">
+			<label class="col-sm-2 control-label">More Info URL</label>
+			<div class="col-sm-10"><input class="form-control" id="add-book-external-url"/></div>
 		</div>
 	</form>
 <div>
