--- a/views/book_add.erb
+++ b/views/book_add.erb
@@ -8,7 +8,7 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-xs-12 page-title"><div>Add a book</div></div>
+		<div class="col-xs-12 page-title"><div>Nominate a book</div></div>
 	</div>
 	<form class="form-horizontal">
 		<div class="form-group">
@@ -18,25 +18,30 @@
 	</form>
 
 	<form class="form-horizontal">
-		<div class="form-group">
+		<div id="add-book-title-group" class="form-group">
 			<label class="col-sm-2 control-label">Title</label>
 			<div class="col-sm-10"><input class="form-control" id="add-book-title"/></div>
 		</div>
-		<div class="form-group">
+		<div id="add-book-author-group" class="form-group">
 			<label class="col-sm-2 control-label">Author</label>
 			<div class="col-sm-10"><input class="form-control" id="add-book-author"/></div>
 		</div>
-		<div class="form-group">
+		<div id="add-book-summary-group" class="form-group">
 			<label class="col-sm-2 control-label"><img id="summary-spinner" class="invisible" src="/images/spinner.gif" style="max-height: 24px"/>Summary</label>
 			<div class="col-sm-10"><textarea class="form-control" id="add-book-summary" rows="7"></textarea></div>
 		</div>
-		<div class="form-group">
+		<div id="add-book-image-url-group" class="form-group">
 			<label class="col-sm-2 control-label">Image URL</label>
 			<div class="col-sm-10"><input class="form-control" id="add-book-image-url"/></div>
 		</div>
-		<div class="form-group">
+		<div id="add-book-external-url-group" class="form-group">
 			<label class="col-sm-2 control-label">More Info URL</label>
 			<div class="col-sm-10"><input class="form-control" id="add-book-external-url"/></div>
+		</div>
+		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<button class="btn btn-default" id="add-book-save-button">Save</button>
+			</div>
 		</div>
 	</form>
 <div>
