--- a/views/index.erb
+++ b/views/index.erb
@@ -28,6 +28,23 @@
 				<div class="col-xs-0 col-sm-3"><!--spacer--></div>
 			</div>
 			
+			<% @unread_books.each do |book| %>
+			<div class="row book-listing">
+				<div class="col-sm-2">
+					<% if book.image_url && !book.image_url.empty? %>
+					<img class="book-image" src="<%= book.image_url %>" />
+					<% end %>
+				</div>
+				<div class="col-sm-offset-1 col-sm-9">
+					<div class="row">
+						<div class="col-xs-12 book-title"><%= book.title %></div>
+					</div>
+					<div class="row">
+						<div class="col-xs-12 book-author"><%= book.author %></div>
+					</div>
+				</div>
+			</div>
+			<% end %>
 			<div class="row">
 				<div class="col-sm-10 col-xs-12"></div>
 				<div class="col-sm-2 col-xs-0"></div>
