--- a/public/stylesheets/sass/index.scss
+++ b/public/stylesheets/sass/index.scss
@@ -39,10 +39,19 @@ body {
 		margin-bottom: 15px;
 		padding-top: 7px;
 		padding-bottom: 8px;
+
+		border-color: #ccc;
+		border-style: solid;
+		border-width: 0px;
+		border-radius: 5px;
 	}
 
 	.book-listing:nth-child(even) {
-		background-color: #f7f7f7;
+		background-color: #f5f5f5;
+	}
+
+	.book-listing:nth-child(odd) {
+		background-color: #fdfdfd;
 	}
 
 	.book-image {
@@ -50,12 +59,17 @@ body {
 	}
 
 	.book-title {
-		font-size: 145%;
+		font-size: 140%;
 		font-style: italic;
 		margin-bottom: 3px;
 	}
 
 	.book-author {
-		font-size: 125%;
+		font-size: 115%;
+	}
+
+	.book-date-added {
+		text-align: right;
+		font-size: 85%;
 	}
 }
