Start working to make books votable. This is far from finished as we want to make books votable inside a meeting instead. So we need meetings first. But this will be a good starting point when that is done.

--- a/public/stylesheets/sass/index.scss
+++ b/public/stylesheets/sass/index.scss
@@ -35,6 +35,18 @@ body {
 }
 
 #main-content {
+	ul.book-list {
+		list-style: none;
+		list-style-type: none;
+		padding: 0;
+		margin: 0;
+
+		li {
+			list-style: none;
+			list-style-type: none;			
+		}
+	}
+
 	.book-listing {
 		margin-bottom: 15px;
 		padding-top: 7px;
@@ -46,11 +58,11 @@ body {
 		border-radius: 5px;
 	}
 
-	.book-listing:nth-child(even) {
+	.book-listing:nth-child(odd) {
 		background-color: #f5f5f5;
 	}
 
-	.book-listing:nth-child(odd) {
+	.book-listing:nth-child(even) {
 		background-color: #fdfdfd;
 	}
 
