--- a/public/stylesheets/sass/index.scss
+++ b/public/stylesheets/sass/index.scss
@@ -6,6 +6,12 @@ body {
 	visibility: invisible;
 }
 
+#page-spinner {
+	max-height: 24px;
+	margin-bottom: 5px;
+	margin-right: 5px;
+}
+
 .page-title {
 	> div {
 		font-size: 215%;
@@ -35,53 +41,63 @@ body {
 }
 
 #main-content {
-	ul.book-list {
+	
+}
+
+ul.book-list, ul.meeting-list {
+	list-style: none;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+
+	li.meeting, li.book-listing {
 		list-style: none;
-		list-style-type: none;
-		padding: 0;
-		margin: 0;
-
-		li {
-			list-style: none;
-			list-style-type: none;			
-		}
+		list-style-type: none;			
 	}
 
-	.book-listing {
+	li.meeting {
 		margin-bottom: 15px;
-		padding-top: 7px;
-		padding-bottom: 8px;
-
-		border-color: #ccc;
-		border-style: solid;
-		border-width: 0px;
-		border-radius: 5px;
 	}
-
-	.book-listing:nth-child(odd) {
-		background-color: #f5f5f5;
+	
+	.meeting-date {
+		font-weight: bold;
 	}
+}
 
-	.book-listing:nth-child(even) {
-		background-color: #fdfdfd;
-	}
+.book-listing {
+	margin-bottom: 15px;
+	padding-top: 7px;
+	padding-bottom: 8px;
 
-	.book-image {
-		max-height: 100px;
-	}
+	border-color: #ccc;
+	border-style: solid;
+	border-width: 0px;
+	border-radius: 5px;
+}
 
-	.book-title {
-		font-size: 140%;
-		font-style: italic;
-		margin-bottom: 3px;
-	}
+.book-listing:nth-child(odd) {
+	background-color: #f5f5f5;
+}
 
-	.book-author {
-		font-size: 115%;
-	}
+.book-listing:nth-child(even) {
+	background-color: #fdfdfd;
+}
 
-	.book-date-added {
-		text-align: right;
-		font-size: 85%;
-	}
+.book-image {
+	max-height: 100px;
+}
+
+.book-title {
+	font-size: 140%;
+	font-style: italic;
+	margin-bottom: 3px;
+}
+
+.book-author {
+	font-size: 115%;
+}
+
+.book-date-added {
+	text-align: right;
+	font-size: 85%;
 }
