--- a/views/meeting.erb
+++ b/views/meeting.erb
@@ -46,6 +46,12 @@
 {{/each}}
 </script>
 
+<script type="text/javascript">
+	window.bbBookClub = {};
+	window.bbBookClub.initialState = '<%= @initial_state_json %>';
+	window.bbBookClub.initialState = JSON.parse(window.bbBookClub.initialState);
+</script>
+
 <script src="/javascripts/jquery.easing.1.3.js"></script>
 <script src="/javascripts/jquery-css-transform.js"></script>
 <script src="/javascripts/jquery.quicksand.js"></script>
@@ -71,14 +77,14 @@
 			</div>
 		</div>
 		<div id="main-content" class="col-md-8">
-			<% if @nominated_books.size > 0 %>
+			<% if @meeting.selected_book_id.nil? || @meeting.selected_book_id == "" %>
 			<div class="row">
 				<div class="col-xs-12 col-sm-9 content-title"><div>Nominations</div></div>
 			</div>
 			<ul class="book-list">
 			
 			</ul>
-			<% end #if @nominated_books %>
+			<% end %>
 		</div>
 	</div>
 </div>
