Select books for meetings

--- a/public/stylesheets/sass/meeting.scss
+++ b/public/stylesheets/sass/meeting.scss
@@ -5,3 +5,11 @@
 .vote-button.vote-selected {
 	color: "#337ab7"
 }
+
+.book-reject-button, .book-select-button {
+	width: 100%;
+}
+
+.book-reject-button {
+	margin-bottom: 5px;
+}
