--- a/views/meeting.erb
+++ b/views/meeting.erb
@@ -27,7 +27,7 @@
 				<img class="book-image" src="{{image_url}}" />
 				{{/if}}
 			</div>
-			<div class="col-sm-offset-1 col-sm-8">
+			<div class="col-sm-offset-1 col-sm-6">
 				<div class="row">
 					<div class="col-xs-12 book-title">{{title}}</div>
 				</div>
@@ -35,9 +35,14 @@
 					<div class="col-xs-12 book-author">{{author}}</div>
 				</div>
 			</div>
-			<div class="col-sm-1">
+			<div class="col-sm-3">
 				<% if @session_state[:show_admin] %>
-				<a href="#" class="book-reject-button" data-book-id="{{book_id}}" data-title="{{title}}">Reject</a></div>
+				<div class="row">
+					<div class="col-sm-12"><button class="btn btn-danger book-reject-button" data-book-id="{{book_id}}" data-title="{{title}}">Reject</button></div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12"><button class="btn btn-success book-select-button" data-book-id="{{book_id}}" data-title="{{title}}">Select</button></div>
+				</div>
 				<% end %>
 			</div>
 		</div>
@@ -60,7 +65,7 @@
 <script src="/javascripts/jquery.easing.1.3.js"></script>
 <script src="/javascripts/jquery-css-transform.js"></script>
 <script src="/javascripts/jquery.quicksand.js"></script>
-<script src="/javascripts/bootbox.min.js"></script>
+<script src="/javascripts/bootbox.js"></script>
 <script src="/javascripts/handlebars-v2.0.0.js"></script>
 <script src="/javascripts/meeting.js"></script>
 <% end %>
@@ -84,7 +89,7 @@
 		<div id="main-content" class="col-md-8">
 			<% if @meeting.selected_book_id.nil? || @meeting.selected_book_id == "" %>
 			<div class="row">
-				<div class="col-xs-12 col-sm-9 content-title"><div>Nominations</div></div>
+				<div class="col-sm-12 content-title"><div>Nominations</div></div>
 			</div>
 			<ul class="book-list">
 			
