Add preview image for covers when adding books

--- a/views/book_add.erb
+++ b/views/book_add.erb
@@ -30,18 +30,20 @@
 			<label class="col-sm-2 control-label"><img id="summary-spinner" class="invisible" src="/images/spinner.gif" style="max-height: 24px"/>Summary</label>
 			<div class="col-sm-10"><textarea class="form-control" id="add-book-summary" rows="7"></textarea></div>
 		</div>
-		<div id="add-book-image-url-group" class="form-group">
-			<label class="col-sm-2 control-label">Image URL</label>
-			<div class="col-sm-10"><input class="form-control" id="add-book-image-url"/></div>
-		</div>
 		<div id="add-book-external-url-group" class="form-group">
 			<label class="col-sm-2 control-label">More Info URL</label>
 			<div class="col-sm-10"><input class="form-control" id="add-book-external-url"/></div>
 		</div>
+		<div id="add-book-image-url-group" class="form-group">
+			<label class="col-sm-2 control-label">Image URL</label>
+			<div class="col-sm-9"><input class="form-control" id="add-book-image-url"/></div>
+			<div class="col-sm-1" id="book-image-preview"></div>
+		</div>
 		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
+			<div class="col-sm-offset-2 col-sm-8">
 				<button class="btn btn-default" id="add-book-save-button">Save</button>
 			</div>
+			
 		</div>
 	</form>
 <div>
