--- a/public/stylesheets/sass/book_add.scss
+++ b/public/stylesheets/sass/book_add.scss
@@ -1,9 +1,3 @@
-// #goodreads-search-input {
-//     background-image:url('/images/spinner.gif');
-//     background-repeat:no-repeat;
-//     background-position:5px 5px /* Change to accommodate to your spinner */
-// }
-
 #search-results {
 	display: block;
 	position: absolute; 
@@ -49,4 +43,8 @@
 		font-size: 115%;
 		font-style: italic;
 	}
+}
+
+#book-image-preview img {
+	max-height: 64px;
 }
