--- a/views/index.erb
+++ b/views/index.erb
@@ -42,11 +42,11 @@
 							</div>
 							<% else %>
 							<div class="row">
-								<div class="col-sm-12"><i><b><%= selected_book.title %></b></i></div>
+								<div class="col-sm-12"><a href="<%= selected_book.book_url %>"><i><b><%= selected_book.title %></b></i></a></div>
 							</div>
 							<% if selected_book.image_url && selected_book.image_url != "" %>
 							<div class="row">
-								<div class="col-sm-12"><img src="<%= selected_book.image_url %>"/></div>
+								<div class="col-sm-12 meeting-book-image"><a href="<%= selected_book.book_url %>"><img src="<%= selected_book.image_url %>"/></a></div>
 							</div>
 							<% end%>
 							<% end %>
@@ -72,12 +72,12 @@
 						<div class="row">
 							<div class="col-sm-2">
 								<% if book.image_url && !book.image_url.empty? %>
-								<img class="book-image" src="<%= book.image_url %>" />
+								<a href="<%= book.book_url %>"><img class="book-image" src="<%= book.image_url %>" /></a>
 								<% end %>
 							</div>
 							<div class="col-sm-offset-1 col-sm-9">
 								<div class="row">
-									<div class="col-xs-12 book-title"><%= book.title %></div>
+									<div class="col-xs-12 book-title"><a href="<%= book.book_url %>"><%= book.title %></a></div>
 								</div>
 								<div class="row">
 									<div class="col-xs-12 book-author"><%= book.author %></div>
