--- a/views/meeting.erb
+++ b/views/meeting.erb
@@ -96,7 +96,7 @@
 			<div class="row">
 				<div class="col-xs-12 meeting-date">
 					<div id="meeting-date-group" class="form-group"><div id="meeting-date"><%= @meeting.date.strftime("%A - %b %d, %Y") %></div></div>
-					 @ 
+					 <div id="meeting-time-symbol"><%= (@meeting.time && @meeting.time != "") ? "@ " : "" %></div>
 					 <div id="meeting-time-group" class="form-group"><div id="meeting-time"><%= @meeting.time %></div></div>
 				</div>		
 			</div>
