--- a/views/meeting_add.erb
+++ b/views/meeting_add.erb
@@ -29,7 +29,16 @@
 			<label class="col-sm-2 control-label">Location</label>
 			<div class="col-sm-10"><input class="form-control" id="add-meeting-location" type="text"/></div>
 		</div>
-		
+		<div id="add-meeting-random-group" class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<div class="checkbox">
+					<label>
+						<input type="checkbox" id="add-meeting-random" checked>Add random nominations</input>
+					</label>
+				</div>
+			</div>
+		</div>
+
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-default" id="add-meeting-save-button">Save</button>
