Resolves #12 - There is now a list of all meetings, past and future

--- a/views/page_menu.erb
+++ b/views/page_menu.erb
@@ -21,6 +21,10 @@
 		</ul>
 	<% end %>
 
+	<ul class="nav navbar-nav">
+		<li><a href="/meetings">Meetings</a></li>
+	</ul>
+	
 	<% if @session_state[:logged_in] %>
 		<ul class="nav navbar-nav navbar-right">
 			<li class="dropdown" id="nav-signin-dropdown">
