Add a link back to github issues

--- a/views/page_menu.erb
+++ b/views/page_menu.erb
@@ -25,6 +25,10 @@
 		<li><a href="/meetings">Meetings</a></li>
 	</ul>
 	
+	<ul class="nav navbar-nav">
+		<li><a href="https://github.com/willia4/bookclub/issues">Report a Bug</a></li>
+	</ul>
+
 	<% if @session_state[:logged_in] %>
 		<ul class="nav navbar-nav navbar-right">
 			<li class="dropdown" id="nav-signin-dropdown">
