Attempt to resolve #34 - change the heading for the main nominated books list to indicate that it's for future nominations. Add a hopefully-helpful tooltip to the title as well.

--- a/views/index.erb
+++ b/views/index.erb
@@ -60,7 +60,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-9 content-title">
 					<a class="title-button" href="/books/add"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a>
-					<div>Nominated Books</div>
+					<div title="These books are the pool from which future meeting nominations will be chosen">For Future Consideration</div>
 				</div>
 				<div class="col-xs-0 col-sm-3"><!--spacer--></div>
 			</div>
