Move the "Edit Meeting" button to a more noticable spot

--- a/public/stylesheets/sass/index.scss
+++ b/public/stylesheets/sass/index.scss
@@ -2,6 +2,14 @@ body {
 	color: #130f30;
 }
 
+.container {
+	margin-bottom: 30px;
+}
+
+.edit-buttons {
+	margin-bottom: 15px;
+}
+
 .hidden {
 	display: none;
 }
