--- a/views/page_menu.erb
+++ b/views/page_menu.erb
@@ -26,6 +26,10 @@
 	</ul>
 	
 	<ul class="nav navbar-nav">
+		<li><a href="/books">Books</a></li>
+	</ul>
+
+	<ul class="nav navbar-nav">
 		<li><a href="https://github.com/willia4/bookclub/issues">Report a Bug</a></li>
 	</ul>
 
